bug where animation not showing, recent bugs out when ajax requests/calls

--- a/css/styles.css
+++ b/css/styles.css
@@ -242,6 +242,7 @@ h2 {
     left: 9px;
     font-family: raleway, sans-serif;
     font-weight: 500;
+    font-size: 12px;
     text-wrap:nowrap;
 }
 
